@@ -2,6 +2,7 @@
 
 = 8.7.0 - xxxx-xx-xx =
 * Add - Log incoming webhook events and their request body.
+* Add - Show UPE payment methods in saved order on block checkout page.
 
 = 8.6.1 - 2024-08-09 =
 * Tweak - Improves the wording of the invalid Stripe keys errors, instructing merchants to click the "Configure connection" button instead of manually setting the keys.
